WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204600
MockAudioSharedUnit should reset its last render time on start/stop/reconfigure
https://bugs.webkit.org/show_bug.cgi?id=204600
Summary
MockAudioSharedUnit should reset its last render time on start/stop/reconfigure
youenn fablet
Reported
2019-11-25 23:57:15 PST
MockAudioSharedUnit should reset its last render time on start/stop/reconfigure.
Attachments
Patch
(3.41 KB, patch)
2019-11-26 00:01 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(3.63 KB, patch)
2019-11-26 00:07 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-11-25 23:57:30 PST
<
rdar://problem/57438874
>
youenn fablet
Comment 2
2019-11-26 00:01:29 PST
Created
attachment 384327
[details]
Patch
youenn fablet
Comment 3
2019-11-26 00:07:02 PST
Created
attachment 384328
[details]
Patch
WebKit Commit Bot
Comment 4
2019-11-30 04:33:03 PST
Comment on
attachment 384328
[details]
Patch Clearing flags on attachment: 384328 Committed
r252956
: <
https://trac.webkit.org/changeset/252956
>
WebKit Commit Bot
Comment 5
2019-11-30 04:33:05 PST
All reviewed patches have been landed. Closing bug.
youenn fablet
Comment 6
2019-12-02 01:07:53 PST
***
Bug 204533
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug